--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO List</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="app" class="container mt-5">
+        <!-- Titolo principale -->
+        <h1 class="text-center mb-4">To Do List</h1>
+
+        <!-- Lista di todos -->
+        <ul class="list-group">                 
+            <li v-for="(todo, index) in todos" :key="index" 
+                class="list-group-item d-flex justify-content-between align-items-center">
+                
+                <!-- Milestone 1: Se 'todo.done' è true, applichiamo una classe per sbarrarlo -->
+                <span @click="toggleDone(index)" 
+                      :class="{ 'text-decoration-line-through': todo.done }"
+                      class="todo-text">
+                    {{ todo.text }} <!-- Visualizziamo il testo del todo -->
+                </span>
+            </li>
+        </ul>
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
