--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <!-- Titolo principale -->
         <h1 class="text-center mb-4">To Do List</h1>
 
+        <!-- Input per aggiungere un nuovo todo -->
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" v-model="newTodo" placeholder="Aggiungi un nuovo todo" @keyup.enter="addTodo">
+            <button class="btn btn-primary" @click="addTodo">Aggiungi</button>
+        </div>
+
         <!-- Lista di todos -->
         <ul class="list-group">                 
             <li v-for="(todo, index) in todos" :key="index" 
